# terrain-sandbox

./: .gitattributes  .gitignore  README.md
app/: build.gradle  proguard-rules.pro
app/cpp/: CMakeLists.txt  jni_optimizer.cpp
app/cpp/glsl-optimizer/tests/: glsl_optimizer_tests.cpp
app/src/androidTest/java/com/sdgapps/terrainsandbox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: atmosphere_frag.glsl  atmosphere_vert.glsl  boxvertex.glsl  cloud_vert.glsl  planet_fragment.glsl  planet_vertex.glsl  sun_vertex.glsl
app/src/main/assets/textures/: stars.pkm
app/src/main/assets/textures/cloudswithmips/: clouds_mip_1.pkm  clouds_mip_2.pkm  clouds_mip_5.pkm  clouds_mip_7.pkm
app/src/main/assets/textures/earth/earthcm00/: earthcm00_mip_0.pkm  earthcm00_mip_1.pkm  earthcm00_mip_10.pkm  earthcm00_mip_2.pkm  earthcm00_mip_3.pkm  earthcm00_mip_4.pkm  earthcm00_mip_5.pkm  earthcm00_mip_6.pkm  earthcm00_mip_7.pkm  earthcm00_mip_8.pkm  earthcm00_mip_9.pkm
app/src/main/assets/textures/earth/earthcm01/: earthcm01_mip_0.pkm  earthcm01_mip_1.pkm  earthcm01_mip_10.pkm  earthcm01_mip_2.pkm  earthcm01_mip_3.pkm  earthcm01_mip_4.pkm  earthcm01_mip_5.pkm  earthcm01_mip_6.pkm  earthcm01_mip_7.pkm  earthcm01_mip_8.pkm  earthcm01_mip_9.pkm
app/src/main/assets/textures/earth/earthcm02/: earthcm02_mip_0.pkm  earthcm02_mip_1.pkm  earthcm02_mip_10.pkm  earthcm02_mip_2.pkm  earthcm02_mip_3.pkm  earthcm02_mip_4.pkm  earthcm02_mip_5.pkm  earthcm02_mip_6.pkm  earthcm02_mip_7.pkm  earthcm02_mip_8.pkm  earthcm02_mip_9.pkm
app/src/main/assets/textures/earth/earthcm03/: earthcm03_mip_0.pkm  earthcm03_mip_1.pkm  earthcm03_mip_10.pkm  earthcm03_mip_2.pkm  earthcm03_mip_3.pkm  earthcm03_mip_4.pkm  earthcm03_mip_5.pkm  earthcm03_mip_6.pkm  earthcm03_mip_7.pkm  earthcm03_mip_8.pkm  earthcm03_mip_9.pkm
app/src/main/assets/textures/earth/earthcm04/: earthcm04_mip_0.pkm  earthcm04_mip_1.pkm  earthcm04_mip_10.pkm  earthcm04_mip_2.pkm  earthcm04_mip_3.pkm  earthcm04_mip_4.pkm  earthcm04_mip_5.pkm  earthcm04_mip_6.pkm  earthcm04_mip_7.pkm  earthcm04_mip_8.pkm  earthcm04_mip_9.pkm
app/src/main/assets/textures/earth/earthcm05/: earthcm05_mip_0.pkm  earthcm05_mip_1.pkm  earthcm05_mip_10.pkm  earthcm05_mip_2.pkm  earthcm05_mip_3.pkm  earthcm05_mip_4.pkm  earthcm05_mip_5.pkm  earthcm05_mip_6.pkm  earthcm05_mip_7.pkm  earthcm05_mip_8.pkm  earthcm05_mip_9.pkm
app/src/main/java/com/sdgapps/terrainsandbox/: CallBackTask.java  Callback.java  EngineManagers.java  GLSurfaceRenderer.java  MainActivity.java  MainScene.java  SceneDataPOJO.java  SimpleQuaternionPool.java  SimpleVec3fPool.java  Singleton.java  Systems.java
app/src/main/res/layout/: activity_main.xml  content_main.xml  info_layout.xml  load_progress_layout.xml  nav_header_main.xml  widget_check.xml  widget_custom.xml  widget_edit.xml  widget_number.xml  widget_seekbar_azimuth.xml  widget_seekbar_elevation.xml  widget_seekbar_range.xml  widget_switch_off.xml  widget_switch_on.xml  widget_wide.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/raw/: atmosphere_frag.glsl  atmosphere_vert.glsl  boxfragment.glsl  boxvertex.glsl  cloud_frag.glsl  clouds_mip_0.pkm  clouds_mip_10.pkm  clouds_mip_11.pkm  clouds_mip_3.pkm  clouds_mip_4.pkm  clouds_mip_6.pkm  clouds_mip_8.pkm  clouds_mip_9.pkm  originalinfo.txt  planet_fragment.glsl  planet_fragment_derivative.glsl  planet_vertex.glsl  planetinfo.txt  shadowmap_fragment.glsl  shadowmap_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  sun_fragment.glsl  sun_vertex.glsl  terrain_fragment_derivative.glsl  terrain_fragment_derivative_shadowed_.glsl  terrain_vertex.glsl  terrain_vertex_planet.glsl  terrain_vertex_shadowed.glsl
app/src/main/res/values/: dimens.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+135 files in other folders)
